# pipirenderer

./: .gitignore  CMakeLists.txt  README.md
src/pipi_cli/: main.cpp
src/pipi_lib/: math.h
src/pipi_lib/math/: ray.h  vec.h
src/pipi_lib/shading/: hit_point.h
